--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "bcrypt": "^6.0.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^4.18.2",
     "express-handlebars": "^8.0.3",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
+    "nanoid": "^5.1.6",
+    "nodemailer": "^7.0.9",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
